<resources>
    <string name="app_name">Foody</string>
    <string name="version">Phiên bản</string>
    <string name="load">Đang tải...</string>
    <string name="fullName">Họ tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="login">Đăng nhập</string>
    <string name="forgotpassword">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <string name="LoginFacebook">Đăng nhập với Facebook</string>
    <string name="LoginGoogle">Đăng nhập với Google</string>
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="signup">Đăng ký</string>
    <string name="passwordagain">Nhập lại mật khẩu</string>
    <string name="find">Tìm kiếm</string>
    <string name="recent">Mới đây</string>
    <string name="food">Món ăn</string>
    <string name="restautant">Quán ăn</string>
    <string name="nearby">Gần tôi</string>
    <string name="home">Trang chủ</string>
    <string name="saved">Đã lưu</string>
    <string name="cart">Giỏ hàng</string>
    <string name="history">Lịch sử</string>
    <string name="more">Xem thêm</string>
    <string name="all">Tất cả</string>
    <string name="places">Địa điểm</string>
    <string name="photos">Hình ảnh</string>
    <string name="blogs">Bài viết</string>
    <string name="camera">Tải hình</string>
    <string name="checkin">Check-in</string>
    <string name="comment">Bình luận</string>
    <string name="save">Lưu lại</string>
    <string name="share">Chia sẻ</string>
    <string name="opening">Đang mở cửa</string>
    <string name="menu">Thực đơn</string>
    <string name="like">Thích</string>
    <string name="activities">Hoạt động</string>
    <string name="photovideo">Ảnh và video</string>
    <string name="collections">Sưu tập</string>
    <string name="name">Tên quán ăn</string>
    <string name="price_max">Giá tối đa</string>
    <string name="price_min">Giá tối thiểu</string>
    <string name="delivery">Giao hàng</string>
    <string name="no_delivery">Không giao hàng</string>
    <string name="open">Giờ mở cửa</string>
    <string name="close">Giờ đóng cửa</string>
    <string name="branches">Chi nhánh</string>
    <string name="add_menu">Thêm thực đơn</string>
    <string name="add_quan">Thêm quán ăn</string>
    <string name="review">Review</string>
    <string name="Delivery">Delivery</string>
    <string name="order">Đặt giao hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api_key">AIzaSyDqbeyRFiVND4iLYCpu9sQ0tPffi_eP5ec</string>
</resources>