<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileActivity">

    <RelativeLayout
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentWhite">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAvatarProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@drawable/user" />

            <!--            <TextView-->
            <!--                android:id="@+id/textViewUsernameProfile"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:layout_marginTop="150dp"-->
            <!--                android:text="User"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="20dp"-->
            <!--                android:textStyle="bold" />-->

        </FrameLayout>

    </RelativeLayout>

<!--    <RadioGroup-->
<!--        android:id="@+id/radioGroup"-->
<!--        android:background="@color/black"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <RadioButton-->
<!--            android:id="@+id/radioActivities"-->
<!--            android:text="@string/activities"-->
<!--            android:textColor="@color/changetext_profile"-->
<!--            android:textAlignment="center"-->
<!--            android:button="@android:color/transparent"-->
<!--            android:checked="true"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioPhotoVideo"-->
<!--            android:text="@string/photovideo"-->
<!--            android:textColor="@color/changetext_profile"-->
<!--            android:textAlignment="center"-->
<!--            android:button="@android:color/transparent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioCollections"-->
<!--            android:button="@android:color/transparent"-->
<!--            android:text="@string/collections"-->
<!--            android:textColor="@color/changetext_profile"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->
<!--    </RadioGroup>-->

<!--    <FrameLayout-->
<!--        android:id="@+id/framelayoutProfile"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--    </FrameLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical"
        android:background="#D8C942">

        <EditText
            android:id="@+id/edittextFullNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/user_icon_white"
            android:drawablePadding="10dp"
            android:hint="@string/fullName"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edittextEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edittextNewPasswordProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edittextPasswordAgainProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/passwordagain"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_weight="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_circle"
                android:padding="0dp"
                android:text="Cập nhật"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/yellow"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnCancelProfile"
                android:layout_weight="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_circle_red"
                android:padding="0dp"
                android:text="Hủy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/yellow"
                app:backgroundTint="@null" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>