<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="5"
            android:padding="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageviewAvatar"
                android:src="@drawable/snowee"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:text="Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/dark_grey"
                        android:drawableLeft="@drawable/comment_icon"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:textColor="@color/dark_grey"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:drawablePadding="2dp"
                        android:drawableTint="@color/dark_grey"
                        android:drawableLeft="@drawable/camera_icon"
                        android:layout_marginLeft="10dp"
                        android:textSize="18dp"
                        android:textColor="@color/dark_grey"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/green"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="0.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="right"
                    android:textColor="@color/dark_grey"
                    android:text="1d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/textTitle"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/textContent"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:text="Comment Comment Comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:drawableLeft="@drawable/camera_icon"
                android:drawableTint="@color/dark_grey"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey"
                android:text="@string/like"
                android:background="@color/white"
                app:backgroundTint="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <Button
                android:drawableTint="@color/dark_grey"
                android:drawableLeft="@drawable/comment_icon"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey"
                android:text="@string/comment"
                android:background="@color/white"
                app:backgroundTint="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <Button
                android:drawableTint="@color/dark_grey"
                android:drawableLeft="@drawable/share_icon"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey"
                android:text="@string/share"
                android:background="@color/white"
                app:backgroundTint="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/grey" />

    </LinearLayout>
</androidx.cardview.widget.CardView>